# Rusta

./: README.md  STRAND_QUICKSTART.md
crates/rusta-cli/: Cargo.toml
crates/rusta-cli/src/: main.rs
crates/rusta-eval/src/: rustaeval.md
crates/rusta/model/: Cargo.toml  README.md
crates/rusta/model/examples/: text_generation.rs
crates/rusta/model/src/: cache.rs  data.rs  inference.rs  lib.rs  model.rs
datasets/identity/: mamba chill
docs/: CONTINUOUS.md  ENGINEERING_SPEC_UNIFIED.md  HUMOR_LMAO.md  identity.md  more notes.md
scripts/: merge.py  merge_qwen2_5_pt.py  pt.py  transpose_safetensors.py
