[package]
name = "rusta-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
clap.workspace = true

# Rusta model for inference
rusta-model = { path = "../rusta/model" }

# Burn with CUDA support
burn = { version = "0.19.0", features = ["cuda"] }
burn-cuda = { version = "0.19.0" }
