[package]
name = "rusta-model"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Burn deep learning framework
burn = { version = "0.19.1", features = ["train", "std", "cuda"] }
burn-cuda = { version = "0.19.1" }
burn-store = { version = "0.19.1" }
burn-import = {version ="0.19.1",features =["safetensors"]}
# For loading safetensors weights manually
safetensors = "0.4"

# Tokenizer
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }